mongodb-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hospital-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hospital-mongo
  template:
    metadata:
      labels:
        app: hospital-mongo
    spec:
      containers:
      - name: mongo
        image: mongo:7
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: hospital-mongo-service
spec:
  selector:
    app: hospital-mongo
  ports:
  - port: 27017
    targetPort: 27017
  type: ClusterIP
